# plash

./: BUGS  COPYRIGHT  NOTES  README  build-glibc-integrated.sh  build-glibc.sh  configure.in  copyright-for-glibc-objs  debian  get-svn-revision.pl  install.sh  make-deb-src-pkg.sh  make-dirs.sh  make-glibc-extra.sh  make-glibc.sh  make-objs.pl  make-package.sh  make-source-package.pl  make.sh  make_objs.py  make_objs_test.py  package-glibc-objs.sh  pkg-install.sh  plash.spec  protocols.txt  run-mostly-installed.sh  run-preload.sh  run-tests.sh  run-uninstalled.sh  set-env.sh
build-tools/: action_tree.py  action_tree_test.py  build_all.py  build_log.py  build_log_test.py  chroot_build.py  chroot_build_config_template.py  format_log.py  in_chroot.py  test-push  test_all.py
build-tools/golden-files/: long.html  short.html
chroot-jail/: install.sh
chroot-jail/debian/: changelog  control  copyright  lintian-overrides  rules
chroot-jail/elf-chainloader/: Makefile  entry.S  test-entry.c  test.py
chroot-jail/setuid/: config.h  gc-uid-locks.c  make-setuid.sh  run-as-anonymous.c
debian/: changelog  control  copyright  make-package.sh  rules
debian-edgy/: changelog  control  make-package.sh  rules
debian-etch/: changelog  control  lintian-overrides  make-package.sh  rules
debian-feisty/: control  copyright  rules
debian-sarge/: changelog  control  make-package.sh  rules
debian-template/: changelog  control  copyright  lintian-overrides  rules
docs/: README.powerbox  Transforms.pm  XXMLParse.pm  bugs.xxml  config.xsl  copyright.xxml  environment.xxml  exec-object.pod  exec-objs.xxml  index.xxml  internals.xxml  make-docs.sh  make-man-pages.pl  man_chroot.xxml  man_exec-object.xxml  man_plash-opts.xxml  man_plash.xxml  man_pola-run.xxml  man_run-as-anonymous.xxml  man_run-emacs.xxml  man_socket-connect.xxml  man_socket-publish.xxml  methods.xxml  parse.pl  plash-chroot.pod  plash-opts.pod  protocols.txt  protocols.xxml  shell.xxml
docs/html/: bugs-and-vulns.html  bugs.html  cap-protocol.html  chroot-comparison.html  chroot.html  compatibility.html  copyright.html  env-dir-fds.html  env-parent-dirs.html  env-symlinks.html  env-vars.html  env.html  exec-obj-examples.html  exec-obj-inst.html  exec-obj-legacy.html  exec-obj-limits.html  exec-obj-notes.html  exec-obj.html  (+32 more)
elf-chainloader/: Makefile  entry.S  loader.c  stack.h  test-argv.c  test-sbrk.c  test.py
glibc-source-package/: README  make.sh
gtk-powerbox-hook/: Makefile.am  configure.in  gtk-powerbox.c  powerbox.c  powerbox.h  powerbox_test.py  test-gtk-powerbox.c  test.sh
gtk-powerbox-hook/debian/: changelog  control  copyright  lintian-overrides  rules
mrs/: COPYRIGHT  NOTES  NOTES.exec  README  build-fs.c  build-fs.h  cap-call-return.c  cap-protocol.c  cap-protocol.h  cap-utils.h  chroot.c  comms.c  comms.h  config.sh  debug.c  driver.c  exec-object.c  files-to-link.pl  filesysobj-fab.c  filesysobj-fab.h  filesysobj-readonly.c  filesysobj-real.c  filesysobj-union.c  filesysobj.c  filesysobj.h  filesysslot.c  filesysslot.h  fixup-ldso.pl  fs-operations.c  fs-operations.h  gc-uid-locks.c  gcc-object.c  glibc-2004-12-06.diff  install.pl  install.sh  libc-comms.c  libc-comms.h  libc-connect.c  libc-fork-exec.c  libc-misc.c  (+46 more)
packaging/: PkgConfig.pm  Unpack.pm  add-field.pl  fetch.pl  firefox.pkg  init.sh  install.pl  leafpad.pkg  make-pkg.py  pkg.py  plash-pkg-choose  plash-pkg-fetch  plash-pkg-install  plash-pkg-launch  plash-pkg-unpack  plash-pkg-update-avail  plash_pkg.py  plash_pkg_choose.py  plash_pkg_test.py  run-deb-inst-scripts.py  run-gnumeric.sh  unpack.pl  update-avail.pl
patches/: debian-glibc-2005-10-04.diff  glibc-2005-10-04.diff
pkg-scripts/: make-deb-src-pkg.sh
plash/: COPYRIGHT  build-glibc-integrated.sh  configure.in  install.sh  libplash.pc.in  make-package.sh  make.sh  make_objs.py  set-env.sh
python/: execobj-hellow.py  hellow2.py  make.sh  plash_env.py  plash_logger.py  plash_marshal.py  plash_namespace.py  plash_pkg.py  plash_pkg_choose.py  plash_pkg_launch.py  plash_pkg_test.py  plash_powerbox.py  plash_process.py  pola-run.py  py-functions.c  py-plash.h  py-type-fd.c  py-type-obj.c  setup.py  test3.py  testrunner.py  testrunner_test.py
rpm/: make-rpm.sh
setuid/: gc-uid-locks.c  make-setuid.sh  run-as-anonymous.c  run-as-nobody+chroot.c  run-as-nobody.c
src/: FileUtil.pm  build-fs-dynamic.c  build-fs-static.c  build-fs.c  build-fs.h  cap-call-return.c  cap-protocol.c  cap-protocol.h  cap-utils-libc.c  cap-utils.c  cap-utils.h  chroot.c  comms.c  comms.h  config-read.c  config-read.h  config.sh  config.sh.in  debug.c  exec-object.c  exec.c  exec.h  export-renames.pl  files-to-link.pl  filesysobj-cow.c  filesysobj-cow.h  filesysobj-fab.c  filesysobj-fab.h  filesysobj-readonly.c  filesysobj-readonly.h  filesysobj-real.c  filesysobj-real.h  filesysobj-union.c  filesysobj-union.h  filesysobj.c  filesysobj.h  filesysslot.c  filesysslot.h  fixup-ldso.pl  fs-operations.c  (+88 more)
tests/: all_tests.py  check-fds.c  comms_test.py  dir_test.py  exec_obj_test.py  fsop_test.py  functional_test.py  hellow.py  libc_test.py  make.sh  protocol_cap.py  protocol_cap_test.py  protocol_event_loop.py  protocol_event_loop_test.py  protocol_simple.py  protocol_simple_test.py  protocol_stream.py  protocol_stream_test.py  run-tests.pl  strace-wrapper.sh  summarise.pl  test-dirs.py  test-getsockopt.c  test-util.c  thread-dirlist.c  thread-open.c  thread-test.c  thread_test.py  wrapper.sh
web-site/: copyright.xxml  download.xxml  environment.xxml  examples.xxml  exec-objs.xxml  index.xxml  internals.xxml  issues.xxml  make.pl  methods.xxml  news.xxml  plash.xxml  pola-run.xxml  pola-shell.xxml  powerbox.xxml  styles.css
x-sec-tests/: README  background-none.c  grab-keyboard.c  grab-pointer.c  grab-server.c  key-injector-xtest.c  key-injector.c  key-sniffer.c  make.sh  screen-grab.c  steal-focus.c  warp-pointer.c
(+294 files in other folders)
